syntax = "proto3";

package posts;

option go_package = "posts.pb";

service Post {
  rpc List (ListRequest) returns (ListResponse) {}
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message ListRequest {}

message ListResponse {
  message Data {
    string id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
  }

  repeated Data data = 1;
}

message CreateRequest {
  string title = 1;
  string content = 2;
  string author = 3;
}

message CreateResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
}

message UpdateRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  optional string author = 4;
}

message UpdateResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}
